# Project_Xs

./: .gitmodules  automation_test.py  pyproject.toml  requirements.txt
configs/: config_phone_turnback.json
src/: calc.py  cresselia.py  player_blink_gui.py  reident_test.py  rngtool.py  starter.py  stationary.py  tidsid.py  underground.py  wild.py  wild_manual.py  windowcapture.py  xorshift.py
